fix horizontal scrollbar in restaurant details

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
-
 /* CSS Document */
+
 body, td, th, p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10pt;
@@ -60,6 +60,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 
 /* ====================== Navigation ====================== */
+
 nav {
   width: 100%;
   height: 80px;
@@ -89,11 +90,13 @@ nav h1 a {
 }
 
 /* Display list items side by side */
+
 #breadcrumb li {
   display: inline;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
+
 #breadcrumb li+li:before {
   padding: 8px;
   color: black;
@@ -101,18 +104,21 @@ nav h1 a {
 }
 
 /* Add a color to all links inside the list */
+
 #breadcrumb li a {
   color: #0275d8;
   text-decoration: none;
 }
 
 /* Add a color on mouse-over */
+
 #breadcrumb li a:hover {
   color: #01447e;
   text-decoration: underline;
 }
 
 /* ====================== Map ====================== */
+
 #map {
   height: 400px;
   width: 100%;
@@ -120,6 +126,7 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Filtering ====================== */
+
 .filter-options {
   width: 100%;
   height: 100%;
@@ -149,6 +156,7 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Listing ====================== */
+
 #restaurants-list {
   display: flex;
   flex-wrap: wrap;
@@ -163,6 +171,7 @@ nav h1 a {
 }
 
 /* media screen for smaller screens */
+
 @media screen and (max-width: 1158px) {
   #restaurants-list {
     flex-direction: column;
@@ -221,12 +230,13 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+
 .inside {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: auto;
 }
 
 .inside #breadcrumb {
@@ -318,8 +328,10 @@ nav h1 a {
 }
 
 #reviews-list {
-  margin: 0 auto;
-  padding: 0 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
   width: 100%;
 }
 
